test/scc/expr/semantic-errors/115.t
void test()
{
    int a = { { 0 } };
}